# node-replication

./: .gitlab-ci.yml  Cargo.toml
.github/workflows/: clippy.yml  cnr.yml  main.yml  nr.yml
bench_utils/: Cargo.toml
benches/: Cargo.toml  criterion.rs  hashbench.rs  hashmap.rs  hashmap_comparisons.rs  log.rs  memfs.rs  mkbench.rs  nop.rs  nrbench.rs  phashmap.rs  pmem_allocator.rs  rwlockbench.rs  stack.rs  synthetic.rs  vspace.rs
benches/utils/: mod.rs  topology.rs
cnr/: Cargo.toml
cnr/src/: context.rs  log.rs  replica.rs
examples/: stack.rs
node-replication/: Cargo.toml
node-replication/benches/hashmap/: hashmap_comparisons.rs  main.rs
node-replication/examples/: nr_dynamic_replica.rs  nr_dynamic_replica_single.rs
node-replication/src/: context.rs  log.rs  replica.rs
node-replication/src/nr/: atomic_bitmap.rs  mod.rs  replica.rs  rwlock.rs
nr/: Cargo.toml
nr/examples/: async-hashmap.rs  hashmap.rs  stack.rs
nr/src/: context.rs  lib.rs  ll.rs  log.rs  replica.rs
nr/tests/: stack.rs
scripts/: ci.bash  mount.sh  plot.py  setup.sh
src/: context.rs  lib.rs  log.rs  qlock.rs  replica.rs  rwlock.rs
tests/: stack.rs
utils/: Cargo.toml
utils/lock_bench/src/: bench.rs
utils/rwlock/src/: lib.rs
