[package]
name = "rwlock"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rwlock"
path = "./rwlock/src/lib.rs"

[[bench]]
name = "lock_bench"
path = "./lock_bench/src/bench.rs"
harness = false

[dependencies]
arr_macro = "0.1.2"

[dev-dependencies]
clap = { version = "2", features = ["yaml"] }
rand = "0.7.3"
